--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@saad/pg-mem",
+  "name": "@saaaad/pg-mem",
   "version": "0.0.1",
   "description": "A memory version of postgres",
   "main": "index.js",
